--- a/THANKS
+++ b/THANKS
@@ -461,3 +461,13 @@ MING-KIAN JONATHAN CEDRIC LEE KIM GNOK - suggestion.
 daltinkurt - suggestion.
 
 Léo-Paul Roch - suggestion.
+
+Matthias Söllner - suggestion.
+
+auriolar - suggestions.
+
+dmcdonald - suggestion.
+
+wahyuamin - example file.
+
+abautu - suggestions.
