--- a/THANKS
+++ b/THANKS
@@ -479,3 +479,9 @@ mrtvillaret - suggestion.
 alienglow - suggestion.
 
 noddy11 - suggestion.
+
+JBoss - suggestion.
+
+thanhnambkhn - suggestion.
+
+Malamojka - bug report.
