--- a/THANKS
+++ b/THANKS
@@ -489,3 +489,7 @@ Malamojka - bug report.
 canhathuongnhau - suggestion.
 
 rodolforg - bug reports in the Brazilian Portuguese translation.
+
+dasa - suggestion.
+
+Julio González Gil - suggestion.
