--- a/THANKS
+++ b/THANKS
@@ -493,3 +493,5 @@ rodolforg - bug reports in the Brazilian Portuguese translation.
 dasa - suggestion.
 
 Julio González Gil - suggestion.
+
+Abou - bug report.
