Upgrade to FET 5.31.4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1940,3 +1940,6 @@ Versions 5.31.0 - 5.31.v
 - Version 5.31.3
 	- Speed improvement in the precomputation if using many rooms and many buildings.
 	- Updated the Arabic translation, by Benahmed Abdelkrim. It is now complete.
+- Version 5.31.4
+	- Bug fix in the printout of the subjects' timetables (reported by math user).
+	- Updated the Arabic translation, by Benahmed Abdelkrim and Silver.
